--- a/SignalRSyncServer/SignalRSyncServer.csproj
+++ b/SignalRSyncServer/SignalRSyncServer.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SignalRSyncCore\SignalRSyncCore.csproj" />
+  </ItemGroup>
+
 </Project>
